2015-07-07 S. Thiell <stephane.thiell@cea.fr>

	* NodeSet: add autostep property to allow changing the way every RangeSet of
	a NodeSet object is displayed (eg. node[2-8/2] instead of node[2,4,6,8]).
	Autostep value is the min number of indexes that are found at equal distance
	of each other inside a range before NodeSet starts to use this syntax.

2015-05-18 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.6.92 released.

2015-04-10 S. Thiell <stephane.thiell@cea.fr>

	* Tree: implement task.copy() in tree mode using temporary tar file.

2015-04-01 S. Thiell <stephane.thiell@cea.fr>

	* Tree: allow local command execution on gateways by adding remote=False to
	task.shell()/run().  In practice with this patch, we can now easily
	execute local commands on (remote) gateways using node argument like
	`ipmitool -H %h` to spread the load between gateways.

2015-03-24 S. Thiell <stephane.thiell@cea.fr>

	* NodeSet.py: disallow opening bracket after digit (ticket #228).

2015-03-23 S. Thiell <stephane.thiell@cea.fr>

	* Clush.py: Warn user of possible use of shell globbing, especially when
	using brackets and bash without GLOBIGNORE set (ticket #225).
	* Clush.py: Fix --diff against null content (ticket #214).

2015-03-19 S. Thiell <stephane.thiell@cea.fr>

	* Task.py: Make max_retcode() return None on no-op. Until now, max_retcode()
	returned 0 by default, so even when no command was able to finish (for
	example, due to reached timeout). This behavior did not allow users to
	distinguish between successful commands and such no-op.

2015-03-11 S. Thiell <stephane.thiell@cea.fr>

	* Worker.py: Introduce StreamWorker as a generic worker class to manage a
	set of streams (using one EngineClient with multiple I/O streams
	internally). It's a concrete class that is now used in Gateway.py to
	manage I/O from the parent host in tree propagation mode. Also changed
	WorkerSimple (and thus WorkerPopen) to inherit from StreamWorker.

2014-05-20 S. Thiell <stephane.thiell@cea.fr>
